Completed JS for slide and toggle

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
         <div class="price-card__toggle">
           <div>Monthly Billing</div>
           <div class="price-card__toggle-switch"><div></div></div>
-          <!-- <div>Yearly Billing<span>25% <span class="price-card__toggle-discount">discount</span></span></div> -->
           <div>Yearly Billing<span>25% <i>discount</i></span></div>
-
-
         </div>
 
         <div class="price-card__footer">
@@ -44,13 +41,6 @@
     </div>
   </main>
 
- 
-
-  
-  <!-- <label for="points">Points (between 0 and 10):</label>
-  <input type="range" id="points" name="points" min="0" max="10">  -->
-
-
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
@@ -58,5 +48,6 @@
     </div>
   </footer>
 
+  <script src="main.js"></script>
 </body>
 </html>
