--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
       <header class="price-card__header">
         <h1>Simple, traffic-based pricing</h1>
         <p>Sign-up for our 30-day trial. <span>No credit card required.</span></p>
-        <!-- <p>Sign-up for our 30-day trial. No credit card required.</p> -->
       </header>
       <div class="price-card">
         <div class="price">
           <div class="price-card__views"><span>100K</span> Pageviews</div>
           <div class="price-card__price">$<span class="price-card__price-amount">16.00</span> <span class="price-card__price-period"> / month</span></div>
-          <div class="price-card__slider">
-            <input type="range" id="price-slider" min="1" max="5" step="1" value="3">
+
+
+          <div class="price-card__slider" tabindex="0">
+            <input type="range" id="price-slider" min="1" max="5" step="1" value="3" tabindex="0">
           </div>
-        </div>
+
+
+        </div>                
         <div class="price-card__toggle">
           <div>Monthly Billing</div>
-          <div class="price-card__toggle-switch"><div></div></div>
+          <div class="price-card__toggle-switch" role="button" tabindex="0" aria-pressed="false" aria-label="select monthly or yearly pricing"><div></div></div>
           <div>Yearly Billing<span>25% <i>discount</i></span></div>
         </div>
 
