Adjusted accessibility of range input

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 
           <div class="price-card__slider" tabindex="0">
+            <label for="price-slider" class="hidden">Set Pageviews</label>
             <input type="range" id="price-slider" min="1" max="5" step="1" value="3" tabindex="0">
           </div>
 
